ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(user)

INCLUDE_DIRECTORIES(${MLL_SOURCE_DIR}/src/core)
FILE(GLOB_RECURSE MLL_UNITTESTS *_ut.cpp)

FOREACH(_UNITTEST ${MLL_UNITTESTS})
    GET_FILENAME_COMPONENT(_UNITTEST ${_UNITTEST} NAME)
    MESSAGE(STATUS "Found unit test: ${_UNITTEST}")
ENDFOREACH()

ADD_EXECUTABLE(mll
    main_mll.cpp
    ${MLL_CORE_SOURCES}
    ${MLL_USER_SOURCES}
)

ADD_EXECUTABLE(mll-test
    main_test.cpp
    ${MLL_CORE_SOURCES}
    ${MLL_USER_SOURCES}

    ${MLL_UNITTESTS}
)

TARGET_LINK_LIBRARIES(mll-test mll-gtest)
ADD_TEST(unittest mll-test)

INSTALL(TARGETS mll      DESTINATION bin)
INSTALL(TARGETS mll-test DESTINATION bin)

